code/typescript/PAEngine/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# PA Engine client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-paengine)](https://www.npmjs.com/package/@factset/sdk-paengine)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch PA Engine Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- Package version: 0.8.7
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-paengine@0.8.7
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-paengine@0.8.7
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:


```javascript
const { ApiClient, AccountsApi } = require('@factset/sdk-paengine');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AccountsApi();
const path = "'Client:Foo/Bar'"; // String | The directory to get the accounts and sub-directories in

// Call api endpoint
apiInstance.getAccounts(path).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*paengine.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v2/accounts/{path} | Get accounts and sub-directories in a directory
*paengine.CalculationsApi* | [**cancelCalculationById**](docs/CalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/v2/calculations/{id} | Cancel calculation by id
*paengine.CalculationsApi* | [**getCalculationStatusById**](docs/CalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/v2/calculations/{id} | Get calculation status by id
*paengine.CalculationsApi* | [**getCalculationStatusSummaries**](docs/CalculationsApi.md#getCalculationStatusSummaries) | **GET** /analytics/engines/v2/calculations | Get all calculation statuses
*paengine.CalculationsApi* | [**runCalculation**](docs/CalculationsApi.md#runCalculation) | **POST** /analytics/engines/v2/calculations | Run calculation
*paengine.ColumnStatisticsApi* | [**getPAColumnStatistics**](docs/ColumnStatisticsApi.md#getPAColumnStatistics) | **GET** /analytics/lookups/v2/engines/pa/columnstatistics | Get PA column statistics
*paengine.ColumnsApi* | [**getPAColumnById**](docs/ColumnsApi.md#getPAColumnById) | **GET** /analytics/lookups/v2/engines/pa/columns/{id} | Get PA column settings
*paengine.ColumnsApi* | [**getPAColumns**](docs/ColumnsApi.md#getPAColumns) | **GET** /analytics/lookups/v2/engines/pa/columns | Get PA columns
*paengine.ComponentsApi* | [**getPAComponentById**](docs/ComponentsApi.md#getPAComponentById) | **GET** /analytics/lookups/v2/engines/pa/components/{id} | Get PA component by id
*paengine.ComponentsApi* | [**getPAComponents**](docs/ComponentsApi.md#getPAComponents) | **GET** /analytics/lookups/v2/engines/pa/components | Get PA components
*paengine.CurrenciesApi* | [**getPACurrencies**](docs/CurrenciesApi.md#getPACurrencies) | **GET** /analytics/lookups/v2/engines/pa/currencies | Get PA currencies
*paengine.DatesApi* | [**convertPADatesToAbsoluteFormat**](docs/DatesApi.md#convertPADatesToAbsoluteFormat) | **GET** /analytics/lookups/v2/engines/pa/dates | Convert PA dates to absolute format
*paengine.DocumentsApi* | [**getPA3Documents**](docs/DocumentsApi.md#getPA3Documents) | **GET** /analytics/lookups/v2/engines/pa/documents/{path} | Get PA3 documents and sub-directories in a directory
*paengine.FrequenciesApi* | [**getPAFrequencies**](docs/FrequenciesApi.md#getPAFrequencies) | **GET** /analytics/lookups/v2/engines/pa/frequencies | Get PA frequencies
*paengine.GroupsApi* | [**getPAGroups**](docs/GroupsApi.md#getPAGroups) | **GET** /analytics/lookups/v2/engines/pa/groups | Get PA groups


## Documentation for Models

 - [paengine.AccountDirectories](docs/AccountDirectories.md)
 - [paengine.Calculation](docs/Calculation.md)
 - [paengine.CalculationStatus](docs/CalculationStatus.md)
 - [paengine.CalculationStatusSummary](docs/CalculationStatusSummary.md)
 - [paengine.CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [paengine.Column](docs/Column.md)
 - [paengine.ColumnStatistic](docs/ColumnStatistic.md)
 - [paengine.ColumnSummary](docs/ColumnSummary.md)
 - [paengine.ComponentAccount](docs/ComponentAccount.md)
 - [paengine.ComponentBenchmark](docs/ComponentBenchmark.md)
 - [paengine.ComponentSummary](docs/ComponentSummary.md)
 - [paengine.Currency](docs/Currency.md)
 - [paengine.DateParametersSummary](docs/DateParametersSummary.md)
 - [paengine.DocumentDirectories](docs/DocumentDirectories.md)
 - [paengine.Frequency](docs/Frequency.md)
 - [paengine.Group](docs/Group.md)
 - [paengine.PACalculationColumn](docs/PACalculationColumn.md)
 - [paengine.PACalculationGroup](docs/PACalculationGroup.md)
 - [paengine.PACalculationParameters](docs/PACalculationParameters.md)
 - [paengine.PAComponent](docs/PAComponent.md)
 - [paengine.PADateParameters](docs/PADateParameters.md)
 - [paengine.PAIdentifier](docs/PAIdentifier.md)
 - [paengine.PubCalculationParameters](docs/PubCalculationParameters.md)
 - [paengine.PubDateParameters](docs/PubDateParameters.md)
 - [paengine.PubIdentifier](docs/PubIdentifier.md)
 - [paengine.SPARCalculationParameters](docs/SPARCalculationParameters.md)
 - [paengine.SPARDateParameters](docs/SPARDateParameters.md)
 - [paengine.SPARIdentifier](docs/SPARIdentifier.md)
 - [paengine.VaultCalculationParameters](docs/VaultCalculationParameters.md)
 - [paengine.VaultDateParameters](docs/VaultDateParameters.md)
 - [paengine.VaultIdentifier](docs/VaultIdentifier.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
