code/typescript/PAEngine/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# PA Engine client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.23.0-blue)](https://developer.factset.com/api-catalog/pa-engine-api)
[![npm](https://img.shields.io/badge/npm-v4.0.0-orange)](https://www.npmjs.com/package/@factset/sdk-paengine/v/4.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.23.0
- SDK version: 4.0.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-paengine@4.0.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-paengine@4.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, AccountsApi } = require('@factset/sdk-paengine');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AccountsApi();
const path = Client:; // String | The directory to get the accounts and sub-directories.

// Call api endpoint
apiInstance.getAccounts(path).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-paengine');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*paengine.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*paengine.CalendarApi* | [**getPACalendars**](docs/CalendarApi.md#getPACalendars) | **GET** /analytics/engines/pa/v3/calendars | Get PA calendars
*paengine.ColumnStatisticsApi* | [**getPAColumnStatistics**](docs/ColumnStatisticsApi.md#getPAColumnStatistics) | **GET** /analytics/engines/pa/v3/columnstatistics | Get PA column statistics
*paengine.ColumnsApi* | [**getPAColumnById**](docs/ColumnsApi.md#getPAColumnById) | **GET** /analytics/engines/pa/v3/columns/{id} | Get PA column settings
*paengine.ColumnsApi* | [**getPAColumns**](docs/ColumnsApi.md#getPAColumns) | **GET** /analytics/engines/pa/v3/columns | Get PA columns
*paengine.ComponentsApi* | [**getPAComponentById**](docs/ComponentsApi.md#getPAComponentById) | **GET** /analytics/engines/pa/v3/components/{id} | Get PA component by id
*paengine.ComponentsApi* | [**getPAComponents**](docs/ComponentsApi.md#getPAComponents) | **GET** /analytics/engines/pa/v3/components | Get PA components
*paengine.ConfigurationsApi* | [**getPACommentaryConfigurations**](docs/ConfigurationsApi.md#getPACommentaryConfigurations) | **GET** /analytics/engines/pa/v3/commentary/configurations | Get PA commentary configurations in a directory
*paengine.CurrenciesApi* | [**getCurrencies**](docs/CurrenciesApi.md#getCurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*paengine.DatesApi* | [**convertPADatesToAbsoluteFormat**](docs/DatesApi.md#convertPADatesToAbsoluteFormat) | **GET** /analytics/engines/pa/v3/dates | Convert PA dates to absolute format
*paengine.DocumentsApi* | [**getPA3Documents**](docs/DocumentsApi.md#getPA3Documents) | **GET** /analytics/engines/pa/v3/documents/{path} | Get PA3 documents and sub-directories in a directory
*paengine.FrequenciesApi* | [**getPAFrequencies**](docs/FrequenciesApi.md#getPAFrequencies) | **GET** /analytics/engines/pa/v3/frequencies | Get PA frequencies
*paengine.GroupsApi* | [**getPAGroupingFrequencies**](docs/GroupsApi.md#getPAGroupingFrequencies) | **GET** /analytics/engines/pa/v3/grouping-frequencies | Get PA grouping frequencies
*paengine.GroupsApi* | [**getPAGroups**](docs/GroupsApi.md#getPAGroups) | **GET** /analytics/engines/pa/v3/groups | Get PA groups
*paengine.LinkedPATemplatesApi* | [**createLinkedPATemplates**](docs/LinkedPATemplatesApi.md#createLinkedPATemplates) | **POST** /analytics/engines/pa/v3/linked-templates | Create a linked PA template
*paengine.LinkedPATemplatesApi* | [**deleteLinkedPATemplates**](docs/LinkedPATemplatesApi.md#deleteLinkedPATemplates) | **DELETE** /analytics/engines/pa/v3/linked-templates/{id} | Delete a linked PA template.
*paengine.LinkedPATemplatesApi* | [**getLinkedPATemplates**](docs/LinkedPATemplatesApi.md#getLinkedPATemplates) | **GET** /analytics/engines/pa/v3/linked-templates | Get linked PA templates
*paengine.LinkedPATemplatesApi* | [**getLinkedPATemplatesById**](docs/LinkedPATemplatesApi.md#getLinkedPATemplatesById) | **GET** /analytics/engines/pa/v3/linked-templates/{id} | Get linked PA template by id
*paengine.LinkedPATemplatesApi* | [**updateLinkedPATemplates**](docs/LinkedPATemplatesApi.md#updateLinkedPATemplates) | **PUT** /analytics/engines/pa/v3/linked-templates/{id} | Update a linked PA template
*paengine.PACalculationsApi* | [**cancelCalculationById**](docs/PACalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/pa/v3/calculations/{id} | Cancel PA calculation by id
*paengine.PACalculationsApi* | [**generatePAPortfolioCommentary**](docs/PACalculationsApi.md#generatePAPortfolioCommentary) | **POST** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary | Generate PA portfolio commentary by calculation and unit id.
*paengine.PACalculationsApi* | [**getAllCalculations**](docs/PACalculationsApi.md#getAllCalculations) | **GET** /analytics/engines/pa/v3/calculations | Get all calculations
*paengine.PACalculationsApi* | [**getCalculationParameters**](docs/PACalculationsApi.md#getCalculationParameters) | **GET** /analytics/engines/pa/v3/calculations/{id} | Get PA calculation parameters by id
*paengine.PACalculationsApi* | [**getCalculationStatusById**](docs/PACalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/pa/v3/calculations/{id}/status | Get PA calculation status by id
*paengine.PACalculationsApi* | [**getCalculationUnitResultById**](docs/PACalculationsApi.md#getCalculationUnitResultById) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/result | Get PA calculation result by id
*paengine.PACalculationsApi* | [**getPAPortfolioCommentaryResultById**](docs/PACalculationsApi.md#getPAPortfolioCommentaryResultById) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary/result | Get PA Portfolio commentary result by calculation and unit id.
*paengine.PACalculationsApi* | [**getPAPortfolioCommentaryStatusById**](docs/PACalculationsApi.md#getPAPortfolioCommentaryStatusById) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary/status | Get PA portfolio commentary status by calculation and unit id.
*paengine.PACalculationsApi* | [**postAndCalculate**](docs/PACalculationsApi.md#postAndCalculate) | **POST** /analytics/engines/pa/v3/calculations | Create and Run PA calculation
*paengine.PACalculationsApi* | [**putAndCalculate**](docs/PACalculationsApi.md#putAndCalculate) | **PUT** /analytics/engines/pa/v3/calculations/{id} | Create or Update PA calculation and run it.
*paengine.PricingSourcesApi* | [**getPAPricingSources**](docs/PricingSourcesApi.md#getPAPricingSources) | **GET** /analytics/engines/pa/v3/pricing-sources | Get PA pricing sources
*paengine.TemplatedPAComponentsApi* | [**createTemplatedPAComponents**](docs/TemplatedPAComponentsApi.md#createTemplatedPAComponents) | **POST** /analytics/engines/pa/v3/templated-components | Create templated PA component
*paengine.TemplatedPAComponentsApi* | [**deleteTemplatedPAComponents**](docs/TemplatedPAComponentsApi.md#deleteTemplatedPAComponents) | **DELETE** /analytics/engines/pa/v3/templated-components/{id} | Delete templated PA component
*paengine.TemplatedPAComponentsApi* | [**getTemplatedPAComponentById**](docs/TemplatedPAComponentsApi.md#getTemplatedPAComponentById) | **GET** /analytics/engines/pa/v3/templated-components/{id} | Get templated PA component by id
*paengine.TemplatedPAComponentsApi* | [**getTemplatedPAComponentsInPath**](docs/TemplatedPAComponentsApi.md#getTemplatedPAComponentsInPath) | **GET** /analytics/engines/pa/v3/templated-components | Get templated PA components in path
*paengine.TemplatedPAComponentsApi* | [**updateTemplatedPAComponents**](docs/TemplatedPAComponentsApi.md#updateTemplatedPAComponents) | **PUT** /analytics/engines/pa/v3/templated-components/{id} | Update templated PA component
*paengine.UnlinkedPATemplatesApi* | [**createUnlinkedPATemplates**](docs/UnlinkedPATemplatesApi.md#createUnlinkedPATemplates) | **POST** /analytics/engines/pa/v3/unlinked-templates | Create unlinked PA template
*paengine.UnlinkedPATemplatesApi* | [**deleteUnlinkedPATemplates**](docs/UnlinkedPATemplatesApi.md#deleteUnlinkedPATemplates) | **DELETE** /analytics/engines/pa/v3/unlinked-templates/{id} | Delete unlinked PA template
*paengine.UnlinkedPATemplatesApi* | [**getDefaultUnlinkedPATemplateTypes**](docs/UnlinkedPATemplatesApi.md#getDefaultUnlinkedPATemplateTypes) | **GET** /analytics/engines/pa/v3/unlinked-templates/template-types | Get default unlinked PA template types.
*paengine.UnlinkedPATemplatesApi* | [**getDetailsType**](docs/UnlinkedPATemplatesApi.md#getDetailsType) | **GET** /analytics/engines/pa/v3/unlinked-templates/template-types/{id} | Get unlinked PA template type details by id.
*paengine.UnlinkedPATemplatesApi* | [**getUnlinkedPATemplates**](docs/UnlinkedPATemplatesApi.md#getUnlinkedPATemplates) | **GET** /analytics/engines/pa/v3/unlinked-templates | Get unlinked PA templates
*paengine.UnlinkedPATemplatesApi* | [**getUnlinkedPATemplatesById**](docs/UnlinkedPATemplatesApi.md#getUnlinkedPATemplatesById) | **GET** /analytics/engines/pa/v3/unlinked-templates/{id} | Get unlinked PA template details by id
*paengine.UnlinkedPATemplatesApi* | [**updateUnlinkedPATemplates**](docs/UnlinkedPATemplatesApi.md#updateUnlinkedPATemplates) | **PUT** /analytics/engines/pa/v3/unlinked-templates/{id} | Update unlinked PA template


## Documentation for Models

 - [paengine.AccountDirectories](docs/AccountDirectories.md)
 - [paengine.AccountDirectoriesRoot](docs/AccountDirectoriesRoot.md)
 - [paengine.CalculationMeta](docs/CalculationMeta.md)
 - [paengine.CalculationStatus](docs/CalculationStatus.md)
 - [paengine.CalculationStatusMeta](docs/CalculationStatusMeta.md)
 - [paengine.CalculationStatusRoot](docs/CalculationStatusRoot.md)
 - [paengine.CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [paengine.CalculationUnitStatusMeta](docs/CalculationUnitStatusMeta.md)
 - [paengine.CalculationsSummary](docs/CalculationsSummary.md)
 - [paengine.CalculationsSummaryRoot](docs/CalculationsSummaryRoot.md)
 - [paengine.ClientErrorResponse](docs/ClientErrorResponse.md)
 - [paengine.Column](docs/Column.md)
 - [paengine.ColumnRoot](docs/ColumnRoot.md)
 - [paengine.ColumnStatistic](docs/ColumnStatistic.md)
 - [paengine.ColumnStatisticRoot](docs/ColumnStatisticRoot.md)
 - [paengine.ColumnSummary](docs/ColumnSummary.md)
 - [paengine.ColumnSummaryRoot](docs/ColumnSummaryRoot.md)
 - [paengine.ComponentSummary](docs/ComponentSummary.md)
 - [paengine.ComponentSummaryRoot](docs/ComponentSummaryRoot.md)
 - [paengine.Currency](docs/Currency.md)
 - [paengine.CurrencyRoot](docs/CurrencyRoot.md)
 - [paengine.DateParametersSummary](docs/DateParametersSummary.md)
 - [paengine.DateParametersSummaryRoot](docs/DateParametersSummaryRoot.md)
 - [paengine.DocumentDirectories](docs/DocumentDirectories.md)
 - [paengine.DocumentDirectoriesRoot](docs/DocumentDirectoriesRoot.md)
 - [paengine.Error](docs/Error.md)
 - [paengine.ErrorSource](docs/ErrorSource.md)
 - [paengine.Frequency](docs/Frequency.md)
 - [paengine.FrequencyRoot](docs/FrequencyRoot.md)
 - [paengine.Group](docs/Group.md)
 - [paengine.GroupRoot](docs/GroupRoot.md)
 - [paengine.LinkedPATemplate](docs/LinkedPATemplate.md)
 - [paengine.LinkedPATemplateParameters](docs/LinkedPATemplateParameters.md)
 - [paengine.LinkedPATemplateParametersRoot](docs/LinkedPATemplateParametersRoot.md)
 - [paengine.LinkedPATemplatePostSummary](docs/LinkedPATemplatePostSummary.md)
 - [paengine.LinkedPATemplatePostSummaryRoot](docs/LinkedPATemplatePostSummaryRoot.md)
 - [paengine.LinkedPATemplateRoot](docs/LinkedPATemplateRoot.md)
 - [paengine.LinkedPATemplateSummary](docs/LinkedPATemplateSummary.md)
 - [paengine.LinkedPATemplateSummaryRoot](docs/LinkedPATemplateSummaryRoot.md)
 - [paengine.LinkedPATemplateUpdateParameters](docs/LinkedPATemplateUpdateParameters.md)
 - [paengine.LinkedPATemplateUpdateParametersRoot](docs/LinkedPATemplateUpdateParametersRoot.md)
 - [paengine.Metadata](docs/Metadata.md)
 - [paengine.ObjectRoot](docs/ObjectRoot.md)
 - [paengine.PACalculationColumn](docs/PACalculationColumn.md)
 - [paengine.PACalculationDataSources](docs/PACalculationDataSources.md)
 - [paengine.PACalculationGroup](docs/PACalculationGroup.md)
 - [paengine.PACalculationParameters](docs/PACalculationParameters.md)
 - [paengine.PACalculationParametersRoot](docs/PACalculationParametersRoot.md)
 - [paengine.PACalculationPricingSource](docs/PACalculationPricingSource.md)
 - [paengine.PACalendar](docs/PACalendar.md)
 - [paengine.PACalendarRoot](docs/PACalendarRoot.md)
 - [paengine.PACommentary](docs/PACommentary.md)
 - [paengine.PACommentaryConfigurationSummary](docs/PACommentaryConfigurationSummary.md)
 - [paengine.PACommentaryConfigurationSummaryRoot](docs/PACommentaryConfigurationSummaryRoot.md)
 - [paengine.PACommentaryDate](docs/PACommentaryDate.md)
 - [paengine.PACommentaryGetStatus](docs/PACommentaryGetStatus.md)
 - [paengine.PACommentaryGetStatusRoot](docs/PACommentaryGetStatusRoot.md)
 - [paengine.PACommentaryParameters](docs/PACommentaryParameters.md)
 - [paengine.PACommentaryParametersRoot](docs/PACommentaryParametersRoot.md)
 - [paengine.PACommentaryRoot](docs/PACommentaryRoot.md)
 - [paengine.PACommentaryStatus](docs/PACommentaryStatus.md)
 - [paengine.PACommentaryStatusRoot](docs/PACommentaryStatusRoot.md)
 - [paengine.PAComponent](docs/PAComponent.md)
 - [paengine.PAComponentData](docs/PAComponentData.md)
 - [paengine.PAComponentRoot](docs/PAComponentRoot.md)
 - [paengine.PADateParameters](docs/PADateParameters.md)
 - [paengine.PAIdentifier](docs/PAIdentifier.md)
 - [paengine.PAPricingSource](docs/PAPricingSource.md)
 - [paengine.PAPricingSourceRoot](docs/PAPricingSourceRoot.md)
 - [paengine.PaginationInfo](docs/PaginationInfo.md)
 - [paengine.PaginationMeta](docs/PaginationMeta.md)
 - [paengine.Section](docs/Section.md)
 - [paengine.TemplateContentTypes](docs/TemplateContentTypes.md)
 - [paengine.TemplatedPAComponent](docs/TemplatedPAComponent.md)
 - [paengine.TemplatedPAComponentParameters](docs/TemplatedPAComponentParameters.md)
 - [paengine.TemplatedPAComponentParametersRoot](docs/TemplatedPAComponentParametersRoot.md)
 - [paengine.TemplatedPAComponentPostSummary](docs/TemplatedPAComponentPostSummary.md)
 - [paengine.TemplatedPAComponentPostSummaryRoot](docs/TemplatedPAComponentPostSummaryRoot.md)
 - [paengine.TemplatedPAComponentRoot](docs/TemplatedPAComponentRoot.md)
 - [paengine.TemplatedPAComponentSummary](docs/TemplatedPAComponentSummary.md)
 - [paengine.TemplatedPAComponentSummaryRoot](docs/TemplatedPAComponentSummaryRoot.md)
 - [paengine.TemplatedPAComponentUpdateParameters](docs/TemplatedPAComponentUpdateParameters.md)
 - [paengine.TemplatedPAComponentUpdateParametersRoot](docs/TemplatedPAComponentUpdateParametersRoot.md)
 - [paengine.UnlinkedPATemplate](docs/UnlinkedPATemplate.md)
 - [paengine.UnlinkedPATemplateCategoryAndType](docs/UnlinkedPATemplateCategoryAndType.md)
 - [paengine.UnlinkedPATemplateCategoryAndTypeDetails](docs/UnlinkedPATemplateCategoryAndTypeDetails.md)
 - [paengine.UnlinkedPATemplateCategoryAndTypeDetailsRoot](docs/UnlinkedPATemplateCategoryAndTypeDetailsRoot.md)
 - [paengine.UnlinkedPATemplateCategoryAndTypeRoot](docs/UnlinkedPATemplateCategoryAndTypeRoot.md)
 - [paengine.UnlinkedPATemplateColumnDetails](docs/UnlinkedPATemplateColumnDetails.md)
 - [paengine.UnlinkedPATemplateGroupDetails](docs/UnlinkedPATemplateGroupDetails.md)
 - [paengine.UnlinkedPATemplateParameters](docs/UnlinkedPATemplateParameters.md)
 - [paengine.UnlinkedPATemplateParametersRoot](docs/UnlinkedPATemplateParametersRoot.md)
 - [paengine.UnlinkedPATemplatePostSummary](docs/UnlinkedPATemplatePostSummary.md)
 - [paengine.UnlinkedPATemplatePostSummaryRoot](docs/UnlinkedPATemplatePostSummaryRoot.md)
 - [paengine.UnlinkedPATemplateRoot](docs/UnlinkedPATemplateRoot.md)
 - [paengine.UnlinkedPATemplateSummary](docs/UnlinkedPATemplateSummary.md)
 - [paengine.UnlinkedPATemplateSummaryRoot](docs/UnlinkedPATemplateSummaryRoot.md)
 - [paengine.UnlinkedPATemplateUpdateParameters](docs/UnlinkedPATemplateUpdateParameters.md)
 - [paengine.UnlinkedPATemplateUpdateParametersRoot](docs/UnlinkedPATemplateUpdateParametersRoot.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
